# calender-stats

./: .gitignore  README.md  pyproject.toml
calendar_stat/: constants.py  main.py  utils.py
calendar_stats/: constants.py  main.py  utils.py
data/: .gitignore
